# VanillaOptionPricers

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
vanilla_option_pricers/: __init__.py  bachelier.py  black_scholes.py  utils.py
vanilla_option_pricers/tests/: bsm_speed.py  test_bachelier.py  test_black_scholes.py
