[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vanilla-option-pricers"
version = "1.2.4"
description = "Fast and vectorised pricer and implied volatility fitters for Black-Scholes and Bachelier models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
keywords = [
    "option pricing",
    "black-scholes",
    "implied volatility",
    "vanilla options",
    "quantitative finance",
    "numba",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"

dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/VanillaOptionPricers"
Repository = "https://github.com/ArturSepp/VanillaOptionPricers.git"
Issues = "https://github.com/ArturSepp/VanillaOptionPricers/issues"

[tool.setuptools.packages.find]
include = ["vanilla_option_pricers*"]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
